--- a/src/components/explain-sample/ExplainSample.css
+++ b/src/components/explain-sample/ExplainSample.css
@@ -3,14 +3,20 @@
 }
 
 .explain-sample-title h2{
+    text-align: center;
     color: white;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     font-weight: bold;
+}
+
+.explain-sample-inner-box {
+    margin: 0 20rem;
 }
 
 .explain-sample-title p {
     color: var(--gray);
     font-size: 2.3rem;
+    text-align: center;
 }
 
 .topping img {
@@ -52,10 +58,38 @@
 }
 
 .explain-onigiri {
-    width: 15rem;
-    height: 15rem;
+    width: 20rem;
+    height: 20rem;
     transform: rotateZ(35deg);
     position: absolute;
-    right: 3rem;
-    top: 9rem;
+    right: 30rem;
+    bottom: 6rem;
+}
+
+
+@media (max-width: 768px) {
+    .explain-sample-container {
+        margin-top: 12rem;
+    }
+
+    .explain-sample-inner-box {
+        margin: 0 8rem;
+    }
+
+    .explain-onigiri {
+        right: 10rem;
+    }
+}
+
+@media (max-width: 425px) {
+    .explain-sample-inner-box {
+        margin: 0 1rem;
+    }
+
+    .explain-onigiri {
+        right: 2rem;
+        bottom: 10rem;
+        width: 12rem;
+        height: 12rem;
+    }
 }
