--- a/src/pages/combos/Combos.css
+++ b/src/pages/combos/Combos.css
@@ -1,2 +1,12 @@
+@media (max-width: 1024px) {
+    .main-container {
+        margin-top: 10rem;
+    }
+}
 
-
+@media (max-width: 992px) {
+    .main-container {
+        display: flex;
+        flex-direction: column;
+    }
+}
